--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
     Asignatura: Lenguaje de marcas y Sistemas de gestión de la información
     Nombre del ejercicio:Tarea evaluativa 2 (80%). Sitio Web.
     Tarea autoevaluativa: https://docs.google.com/document/d/11JveQvr8HGPq1ICYHrsq930XggfOiEMksCTdbK8_ATw/edit?usp=sharing
-    Código en vivo: 
+    Código en vivo: https://ioncerezo.github.io/LMSGI02TE02/
 */
 
 /*
