add box shadow to nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,6 +115,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   background-color: bisque;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 nav section img {
